# etherlab-nodejs

./: CMakeLists.txt  binding.gyp  package-lock.json  package.json
lib/: ecat2.lib.js
sample/: example.js  slaves.sample.json
src/: api.cc
src/etherlab-helper/include/: TimespecHelper.hpp  etherlab-helper.h
src/etherlab-helper/src/: config-parser.cpp  config-parser.h  domain.cpp  etherlab-helper.cpp  sdo.cpp
